[package]
name = "makepdf"
version = "0.1.0"
edition = "2021"

[dependencies]
pdftool = { git = "https://github.com/kimotu4632uz/pdftool.git" }

anyhow = "1.0.66"
itertools = "0.9.0"

tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"

image = "0.23.12"

reqwest = "0.11.13"
scraper = "0.12.0"
mime_guess = "2.0.3"

